Style css was changed location file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <meta name="author" content="Maxim Safronov">
   <meta name="description" content="Главные проблемы в обучении">
   <title>Научиться учиться</title>
@@ -17,7 +17,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <h3 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать →</a></h3>
     <img src="./images/header-image.png" class="header__main-illustration" alt="Изобрежание не удалось загрузить :(">
-    <img class="header__square-pic" alt="Изобрежание не удалось загрузить :(">
+    <img class="header__square-pic">
     </header>
 
    <main class="content">
